# robotics_ros2_python_cpp

./: README.md  notes.txt
non_ros2_src/: motor1_forward.py  motor1_position.py  motor2_forward.py  motor2_position.py  set_cmd_vel.py  video_capture_test.py
qbot_nodes_cpp/: CMakeLists.txt  package.xml
qbot_nodes_cpp/include/: camera_interface_header.hpp  roboclaw.hpp  robot_configuration.hpp
qbot_nodes_cpp/launch/: display_launch.py  display_no_xacro_launch.py  display_no_xacro_meters_launch.py  hardware_bringup_launch.py
qbot_nodes_cpp/meshes/: rover_base.stl
qbot_nodes_cpp/msg/: EncoderCounts.msg
qbot_nodes_cpp/src/: base_controller.cpp  encoder_test.cpp  listener.cpp  local_planner.cpp  motor_duty_cycle_test.cpp  motor_encoder_tests.cpp  motor_start.cpp  motor_stop.cpp  odometry.cpp  pub_cmd_vel.cpp  realtime_tests.cpp  talker.cpp  uvc_camera.cpp
qbot_nodes_cpp/src/pub_sub_test_nodes/: pub_cmd_vel.cpp  sub_cmd_vel.cpp
qbot_nodes_cpp/srv/: HeadingSpeed.srv
qbot_nodes_cpp/urdf/: qbot_description.urdf  qbot_description_no_xacro.urdf  qbot_description_no_xacro_meters.urdf
qbot_nodes_py/: package.xml  setup.cfg  setup.py
qbot_nodes_py/qbot_nodes_scripts_py/: listener.py  pub_cmd_vel.py  sub_cmd_vel.py  talker.py
qbot_nodes_py/src/: camera_command_client.py  listener.py  pub_cmd_vel.py  sub_cmd_vel.py  uvc_camera.py
qbot_nodes_py/srv/: UpdateTwist.srv
