<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>qbot_nodes_py</name>
  <version>0.0.0</version>
  <description>
    Python nodes for QBot robot control, and for building other Python nodes.
  </description>
  <maintainer email="shawnquinn861@gmail.com">Shawn Quinn</maintainer>
  <license>Apache License 2.0</license>

  <author>Shawn Quinn</author>
  <author email="shawnquinn861@gmail.com">Shawn Quinn</author>
 
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
